--- a/week-2/berkshire/my-berkshire-site.html
+++ b/week-2/berkshire/my-berkshire-site.html
@@ -21,7 +21,7 @@
         <li><a href="#">Order Berkshire Activewear On-line</a></li>
         <li><a href="#">Letter from Warren E. Buffett Regarding Pledges to Make Gifts of Berkshire Stock</a> Updated August 30,2012</li>
       </ul> 
-     <img src="../imgs/geico_img.png" alt="Geico Logo"> FOR A FREE CAR INSURANCE RATE QUOTE THAT COULD SAVE YOU SUBSTANTIAL MONEY <a href="#">WWW.GEICO.COM</a> OR CALL 1-800-395-6349, 24 HOURS A DAY
+     <img src="../imgs/geicoimg.gif" alt="Geico Logo"> FOR A FREE CAR INSURANCE RATE QUOTE THAT COULD SAVE YOU SUBSTANTIAL MONEY <a href="#">WWW.GEICO.COM</a> OR CALL 1-800-395-6349, 24 HOURS A DAY
       <p>
       If you have any comments about our WEB page, you can either write us at the address shown above or e-mail us at <a href="#">berkshire@berkshirehathaway.com</a>. However, due to the limited number of personnel in our corporate office, we are unable to provide a direct response.
       </p>
