Add comments Robin S.

--- a/week-3/dissect-me.html
+++ b/week-3/dissect-me.html
@@ -42,6 +42,24 @@
 			<p>Yes definitely. The wireframe helped to thing in larger skeleton-blocks of code (navigation, article, footer etc) before detailing it down later on. I have the impression that without a mock-up, we would have had the tendency to dive into the code straight away and get lost in desorganisation.</p>
 		</section>
 	</article>
+<!--
+What HTML5 tags have you used in this challenge and continue to return to often? Why?
+	- We have hused article to describe each of our distinct blogposts.
+	- We often used sections as there are multiple sections per article.
+	- We didn't use any nav, figure or figcaption as there were none in our individual blogposts.
+
+How do elements get laid out on a page? What is the order the browser uses to display elements?
+	The elements follow the html file by structure (top down and left-right)
+
+What did you learn about Sublime in this challenge? Do you think you'll create more handy snippets at a later date? What about research some shortcuts that already exist?
+	I already used the html snippet (probably by accident), but this looks like a very helpful function to save time. Especially when creating similar pages with a large portion of the same code. For example I gues that I could add my blog template as a snippet so that all future blogposts have the right structure, links to css files etc. 
+	I defenitely use as much shortcuts as possible to save time. After all it takes a couple of minutes to learn them and it saves much more time in the long run!
+-->
+
+
+
+
+
 
 </body>
 </html>
