--- a/week-3/dissect-me.html
+++ b/week-3/dissect-me.html
@@ -42,7 +42,8 @@
 			<p>Yes definitely. The wireframe helped to thing in larger skeleton-blocks of code (navigation, article, footer etc) before detailing it down later on. I have the impression that without a mock-up, we would have had the tendency to dive into the code straight away and get lost in desorganisation.</p>
 		</section>
 	</article>
-<!--
+<!-- COMMENTS ROBIN SOUBRY
+
 What HTML5 tags have you used in this challenge and continue to return to often? Why?
 	- We have hused article to describe each of our distinct blogposts.
 	- We often used sections as there are multiple sections per article.
@@ -56,7 +57,11 @@ What did you learn about Sublime in this challenge? Do you think you'll create m
 	I defenitely use as much shortcuts as possible to save time. After all it takes a couple of minutes to learn them and it saves much more time in the long run!
 -->
 
+<!-- COMMENTS BUCK MELTON
 
+
+
+-->
 
 
 
