Add reflection Buck Melton

--- a/week-3/dissect-me.html
+++ b/week-3/dissect-me.html
@@ -59,6 +59,16 @@ What did you learn about Sublime in this challenge? Do you think you'll create m
 
 <!-- COMMENTS BUCK MELTON
 
+What HTML5 tags have you used in this challenge and continue to return to often? Why?
+	We used the HTML5 tags 'section' and 'article' in this challenge.  I hadn't previously used 'article', since I'm still getting familiar with all of the various semantic tags and their best uses.  I've often used 'section', since it's a top-level, very generic tag, comparable to 'div', and extremely useful when slicing up your HTML page into constituent elements.
+
+How do elements get laid out on a page? What is the order the browser uses to display elements?
+	We didn't really discuss this as part of this challenge.  However, typically CSS is used to determine position on the page.  The general rule, even before CSS is taken into account, is that the top-level elements are laid out left-to-right and top-to-bottom.  And then within each element, its subelements are recursively laid out thusly.  However, that can be altered depending on how CSS is used to style the elements.
+
+What did you learn about Sublime in this challenge? Do you think you'll create more handy snippets at a later date? What about research some shortcuts that already exist?
+	I learned that you can easily create customized snippets to quickly insert whole formatted blocks of code or text that you use often.  I will definitely be creating some snippets!  I'm also very curious about what existing snippets there may be.  I'm sure there's a whole universe of ones already created, it's juat a matter of finding which if any are relevant to my uses.
+
+-->
 
 
 -->
