Complete challenge with css and reflection

--- a/week-4/gps/gps2-1.html
+++ b/week-4/gps/gps2-1.html
@@ -1,8 +1,8 @@
 <!--
 Write your names here:
-1.
-2.
-We spent [#] hours on this challenge.
+1. Daniel J. Park
+2. Robin Soubry
+We spent [1.5] hours on this challenge.
 -->
 
 <!-- This challenge uses HTML5 syntax that may not be available in all browsers (It works in Chrome and Safari, from my testing. (<details> and<summary>). -->
@@ -14,7 +14,6 @@ We spent [#] hours on this challenge.
     <link rel="stylesheet" type="text/css" href="gps2-1.css">  <!-- Insert a link to the stylesheet here -->
     <title>Git Cheat Sheet</title>
   </head>
-
   <body>
     <header>
       <h1>GitHub: Git Cheat Sheet</h1>
@@ -277,5 +276,15 @@ We spent [#] hours on this challenge.
       This information is copied directly from <a href="https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub's Training Cheatsheet</a>.
     </footer>
   <!-- Add your reflection here as a comment. -->
+  <!--
+
+  I have the impression that we both mastered the subject well enough to properly position the columns and apply some basic styling to the page.
+  
+  We had a small struggle when we wanted some more room between the columns and the footer… And it turns out that a margin-top does not have a reference point after using float… This experience confirmed that coding is a skill that one learns mostly by doing, getting stuck looking up solutions and trying it out, much less than simple reading. So I guess that Google, Stackoverflow and countless other blogs will be my new best friends.
+
+  As for the GPS challenge itself, I'm somehow uncomfortable by not having read the instructions in advance to better frame the time spent on each release. I have the impression that sometimes, we spent too much time on a release and then had to rush to the other one to make sure we got most out of our time with the guide.
+
+  -->
+
   </body>
 </html>
