Add reflection and images

--- a/week-7/game/game.html
+++ b/week-7/game/game.html
@@ -5,8 +5,23 @@
 	<script type="text/javascript" src="game.js"></script>
 </head>
 <body>
+<h1>The Spartacus Race</h1>
+<img src="imgs/logo.jpg" alt="Spartacus Run Logo" width="400px">
 
+<h2>Challenge 1: Mud Pool</h2>
+<img src="imgs/1_mudPool.jpg" alt="Spartacus Run Mud Pool" width="400px">
 
+<h2>Challenge 2: Devil's Staircase</h2>
+<img src="imgs/2_devilStairCase.jpg" alt="Spartacus Run Hay Stacks" width="400px">
+
+<h2>Challenge 3: Angel Falls</h2>
+<img src="imgs/3_angelFall.jpg" alt="Spartacus Run Jump in Water" width="400px">
+
+<h2>Challenge 4: Spider Web</h2>
+<img src="imgs/4_spiderWeb.jpg" alt="Spartacus Run Spider Web" width="400px">
+
+<h2>Challenge 5: Land Slide</h2>
+<img src="imgs/5_landSlide.jpg" alt="Spartacus Run Mud Slide" width="400px">
 
 </body>
 </html>
